# gng.r

./: .gitignore  CMakeLists.txt  DESCRIPTION  NAMESPACE  README.md  build.sh
R/: gmum.R  gng.R  gng.utils.R  graphics.R
R/models/: 1000nodes_efC=99.csv  app_gng_1000_recall=FALSE  app_gng_1000_recall=TRUE  app_gng_2000_recall=FALSE  app_gng_2000_recall=TRUE
cmake/: FindR.cmake
inst/include/gng/: gng_algorithm.h  gng_configuration.h  gng_dataset.h  gng_graph.h  gng_graph.hpp  gng_lazy_error_heap.h  gng_node.h  gng_server.h  uniform_grid.h  uniform_grid.hpp
inst/include/hnsw/: distance.hpp  index.hpp  options.hpp
inst/include/hnsw/detail/: CustomVec.h
inst/include/utils/: utils.h
man/: approximate-gng.Rd
src/: CMakeLists.txt  Makevars  Makevars.win  README.md
src/gng/: gng_algorithm.cpp  gng_configuration.cpp  gng_module.cpp  gng_server.cpp
src/svmlight/: svm_hideo.c
tests/cpp/: CMakeLists.txt  Makefile  gmumr_tests
tests/cpp/ann/: ann.cpp
tests/cpp/benchmarks/: cross_validation.cpp  performance_tests.cpp
tests/cpp/gng/: basic_integration_tests.cpp  parts_tests.cpp
